--- a/blogsite/blog/templates/blog/base.html
+++ b/blogsite/blog/templates/blog/base.html
@@ -34,7 +34,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Новый Пост</a>
+                <a class="nav-item nav-link" href="{% url 'post-create' %}">Новый Пост</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Профиль</a>
                 <form method="post" action="{% url 'logout' %}">
                   {% csrf_token %}
